apps/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: demo
spec:
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
